css/team.css
/*
===================================
===================================
Styles for an individual page

- Rename this file to match the page you are working on (e.g. home.css, about.css, etc.)
- Create a new file for your page and link this file to it in the <head> of your HTML document
- Variables from global.css will work in this CSS file as well. Do not add any variables to this file.
===================================
===================================
*/

/* 
===================================
Page Component Styles (icon grid, team member card)
===================================
*/
.black-text h3, .black-text h4, .black-text p {
    color: var(--color-onyx);
}

.button2 {
	border-radius: 10px;
	background-color: var(--button2-color);
	padding: 10px 40px;
	color: var(--color-white);
	border: none;
	min-width: 187px;
	min-height: 50px;
	margin: 20px;
	font-family: var(--main-font);
	font-weight: var(--font-weight-bold);
	font-size: var(--font21);
}
.button2:hover {
	background-color: var(--color-white);
	color: var(--color-onyx);
}

/* 
===================================
Section Styles (background, padding, etc.)
===================================
*/
.wrapper {
	width: var(--mobile-wrapper-width);
}
h5 {
    color: var(--color-white);
}

/* header section */
.header-picture {
	margin-bottom: var(--spacing80);
}
picture {
	width: 100%;
}
picture img {
	min-width: 100%;
}
h3 {
	margin-top: 0px;
	margin-bottom: var(--spacing20);
}

/* team card section */
.team-card {
	margin: var(--spacing20) 0;
	padding: var(--spacing20);
	padding-top: 60px;
    background: var(--color-teal);
	border: none;
	border-radius: 10px;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.team-card div {
	margin: 10px;
}
.team-card h4{
	margin: 0px;
}
.team-card h5 {
	margin: var(--spacing10) 0px;

}
.team-card p {
	color: var(--color-white);
}
.team-parent {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

/* Current positions */
.current-positions {
	width: 90%;
	margin: 150px auto;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
.current-positions h4 {
	margin: 0px 0px 20px 0px;
}

.black-text h3, .black-text h4 {
	text-align: center;
}
.team-card img, .get-involved img {
	border-radius: 10px;
}
/* 
===================================
Media Queries (overriding styles for different screen sizes)

Note: Here we are using a mobile-first approach, so we start with the smallest screen size and work our way up.
Start by writing styles for the mobile version of the design on the lines above.
Anything that needs to change for larger screens should be added to the media queries below.

Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	/* Add styles that only apply to tablet. These are usually fixes to get resposnivenes right */
}

/* Tablet and Larger */
@media screen and (min-width: 768px) {
	/* Add styles that apply to table and desktop */
	.wrapper {
		width: var(--desktop-wrapper-width);
	}
	.header-section {
		width: 100%;
		height: 992px;
		background-size: cover;
		background-position: center;
		background-image: url("/assets/images/pages/our-team/desktop/header-section-background.png");

		display: flex;
		align-items: center;
	}
	.header-content {
		width: 70%;
		margin: 0 auto;
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		gap: 185px;
		
	}
	.header-content img {
		max-height: 435px;
	}
	.header-info {
		width: 30%;
	}
	.header-info h3 {
		font-size: var(--font56);
		font-weight: var(--font-weight-bold);
		line-height: var(--line-height58);
		color: var(--color-white);
		text-align: left;
	}
	.header-info p {
		color: var(--color-white);
	}
	.team-card {
		display: flex;
		flex-direction: row;
		justify-content: left;
	}
	.current-positions {
		width: 60%;
		margin: 0 auto;
		padding: var(--spacing40) 0;
	}
	.get-involved {
		display: flex;
		flex-direction: row-reverse;
		justify-content: center;
		/* gradient is opposite- needs to be adjusted in global styles */
		background: var(--color-bluepurple);
	}
	.get-involved h4 {
		color: var(--color-white);
	}
	.get-involved p {
		color: var(--color-white);
	}
	.get-involved .button2 {
		/* need to make styles for the button */
	}
}

/* Desktop Only */
@media screen and (min-width: 1024px) {
	/* Add styles that apply specifically to desktop */
	.team-parent {
		display: flex;
		flex-direction: row;
		justify-content: space-evenly;
		align-items: center;
		margin: 0 auto;
	}
	.team-card {
		width: 45%;
	}
	.get-involved h4 {
		font-size: var(--font46);
		font-weight: var(--font-weight-bold);
		line-height: var(--line-height50);
		color: var(--color-white);
	}
}

